gccida/c1/emit_block_move
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2096:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2113:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2114:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2116:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2117:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2118:5: error: expected ';' after expression
tree v37; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2118:6: error: use of undeclared identifier 'v37'
tree v37; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2120:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2121:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2122:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2123:5: error: expected ';' after expression
tree v42; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2123:6: error: use of undeclared identifier 'v42'
tree v42; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2124:5: error: expected ';' after expression
tree v43; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2124:6: error: use of undeclared identifier 'v43'
tree v43; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2133:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2138:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)y[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2198:27: error: use of undeclared identifier 'machine_mode'
v29 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), to->fld[0].rtx); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/expr.c:2200:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_block_move/src/obj/expr.o] Error 1
